<resources>
    <string name="app_name">TLJ下载</string>
    <string name="app_version">v1.0.1</string>
    <string name="app_db_path">tljdir/dowload/db</string>
    <string name="app_down_path">tljdir/dowload/file</string>
    <string name="app_cache_path">tljdir/dowload/cache</string>
    <string name="app_crash_path">tljdir/dowload/crash</string>
    <string name="app_video_thumbnail_path">tljdir/dowload/.pic</string>
    <string name="xl_package_name">com.xunlei.downloadprovider</string>

    <string name="title_dialog">提示</string>
    <string name="setting">设置</string>
    <string name="resume">继续</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="open">打开</string>
    <string name="play">播放</string>
    <string name="download">下载</string>
    <string name="downloading">下载中</string>
    <string name="down_finish">已完成</string>
    <string name="is_stop">已暂停</string>
    <string name="wait_down">等待下载</string>
    <string name="bt_search">种子搜索</string>
    <string name="date">时间</string>
    <string name="hot">热度</string>

    <string name="message_setting_comeback">前往设置界面.</string>
    <string name="message_permission_rationale">请授权以下必要权限程序才能继续运行:\n\n%1$s</string>
    <string name="message_permission_always_failed">请前往设置界面授予权限:\n\n%1$s</string>
    <string name="down_count">下载:%1$s/%2$s</string>
    <string name="down_speed">速度:%1$s</string>
    <string name="down_speed_up">加速:%1$s</string>
    <string name="remaining_time">剩余:%1$s</string>
    <string name="play_time">%1$s/%2$s</string>
    <string name="magnet_date">日期:%1$s</string>
    <string name="magnet_size">大小:%1$s</string>
    <string name="magnet_hot">热度:%1$s</string>
    <string name="search_source">搜索来源：%1$s</string>
    <string name="search_sort">结果排序：%1$s</string>

    <string name="add_download">添加任务</string>
    <string name="add_downloading">添加任务中....</string>
    <string name="download_management">下载管理</string>
    <string name="new_download">新建下载任务</string>
    <string name="slest_option">选择操作</string>
    <string name="qr_download">扫描二维码下载</string>
    <string name="url_download">下载链接(磁力链、thunder://、ftp://、http:// ed2k://)</string>
    <string name="bt_download">选择BT种子</string>
    <string name="bt_file_error">种子文件解析失败</string>
    <string name="bt_file_info">种子文件信息</string>
    <string name="not_diy_down_bt">目前只能下载种子所有文件，暂时还不支持指定文件下载</string>

    <string name="url_download_hit">请输入或粘贴下载链接(支持：磁力链、thunder://、ftp://、http:// ed2k://)</string>
    <string name="task_earlier_has">任务已经存在下载列表中</string>
    <string name="task_earlier_success">任务已经存在完成列表中</string>
    <string name="add_task_fail">添加任务失败，请重试！</string>
    <string name="add_task_success">任务添加成功！</string>
    <string name="dele_success">删除成功</string>
    <string name="dele_fail">删除失败</string>
    <string name="determine_dele">确认删除</string>
    <string name="dele_data_and_file">连同文件一起删除</string>
    <string name="file_is_dele">本地文件已删除</string>

    <string name="check_file">请选择文件</string>
    <string name="check_count">已选择(%1$s/%2$s)</string>
    <string name="check_all">全选</string>
    <string name="cancel_check_all">取消全选</string>

    <string name="test_url">thunder://QUFmdHA6Ly95Z2R5ODp5Z2R5OEB5ZzQ1LmR5ZHl0dC5uZXQ6ODExNi9bJUU5JTk4JUIzJUU1JTg1JTg5JUU3JTk0JUI1JUU1JUJEJUIxd3d3LnlnZHk4Lm5ldF0lRTUlQUYlQkIlRTUlQTQlQTIlRTclOTIlQjAlRTYlQjglQjglRTglQUUlQjAuSEQuNzIwcC4lRTUlOUIlQkQlRTglOEIlQjElRTUlOEYlOEMlRTglQUYlQUQlRTQlQjglQUQlRTUlQUQlOTcubWt2Wlo=</string>
    <string name="search_hint">输入搜索关键字</string>
    <string name="download_selected">下载选中文件</string>
    <string name="select_all">全选</string>
    <string name="delete_selected">删除选中文件</string>
    <string name="source">源</string>
    <string name="note_detail">《TLJ下载》提醒您：\n\n 在使用TLJ下载（本软件）功能之前，请您务必仔细阅读以下内容，若您点击“同意”，表示您对声明内容的知悉与认可；若您点击“拒绝”，则不同意本声明，系统将自动退出本软件。  \n\n 一、关于本软件 TLJ下载是一款多功能手机视频播放浏览器，既可播放本地视频，也可播放指定网络地址下的视频，同时提供用户之间的交流平台，享有合法软件著作权，受中华人民共和国相关法律法规保护。  \n\n 二、关于内容 TLJ下载所聚合内容均来自互联网，内容版权均归各大视频网站及版权方所有。TLJ下载不存储、不修改视频网站或电视台的节目内容。视频数据流也不经由本公司服务器中转或存储。本软件在提供播放时，将明确标明视频数据内容的来源。TLJ下载的目的是帮助全球华人更便捷的收看视频网站或电视台的视频节目。如果您喜欢相应视频或节目内容，建议您到各大视频官方网站或官方APP收看正版授权内容。  \n\n 三、关于分类 TLJ下载对视频和网络电视台的聚合及分类，是根据用户的收看习惯做的浏览引导。这样可以方便用户更快捷的找到喜欢的视频内容或节目。本软件并没有对视频内容做编辑及整理。  \n\n 四、法律责任 因本软件涉及相关数据均来源或指向不受本公司控制的第三方网站，故本公司对播放内容的安全性，合法性不做任何保证，也不承担任何责任。用户应对使用本软件所获得或发出的数据，以及使用本软件所发布的言论与信息，自行承担法律责任。  \n\n 五、权利及通知 任何单位或个人认为本软件聚合到的第三方网站所呈现的内容可能涉嫌侵犯其信息网络传播权或其他权利的，应及时以书面方式通知本公司，并提供身份证明，权属证明，初步侵权情况证明。本公司将在收到前述文件并经审查后，依法尽快断开相关链接内容。 联系方式如下: yinxiangjake@126.com</string>
    <string name="nav_note">免责声明</string>
    <string name="agreen">同意</string>
    <string name="not_agreen">不同意</string>
</resources>
